2012-01-17  Koichiro Kikuchi <koichiro@rworks.jp>

	* pandora_server.redhat.spec: Fixed a wrong dependency.
	  RHEL has a net-snmp-perl, not a perl-SNMP.

2012-01-17  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added the option
	exec_from_file to import CSV data. Fixed create_user
	option entities

2012-01-16  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm: Added a missed safe input in
	the get_agent_module_id function

	* util/pandora_manage.pl: Added options to update a 
	field of a data, network, plugin or snmp module

2012-01-13  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added update_alert_template
	option

2012-01-12  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added options to add
	network, plugin and snmp modules to policy from 
	CLI

2012-01-11  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added icon to the create
	group option

2012-01-11  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Fixed a little bug in 
	the configuration_data field when create a data
	module in a policy

2012-01-11  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Little fixes over the last
	changes

2012-01-11  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added options
	--create_policy_data_module and --create_alert_template 
	to CLI and merged changes from Kosaka works into 4.0 branch
	adding str_warning and str_critical parameters to all
	modules creation options

2012-01-05  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added --get_module_data in 
	CSV format option to CLI

2012-01-05  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	util/pandora_manage.pl: Added two new options to 
	CLI --update_user and --add_profile_to_user

2012-01-04  Sergio Martin <sergio.martin@artica.es>

	*  lib/PandoraFMS/DB.pm
	util/pandora_manage.pl: Added --enable_user and